--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "com.diagnal.app.lightningpoc",
+  "homepage": ".",
   "description": "Lighting POC",
   "scripts": {
     "prepare": "husky install"
   },
   "dependencies": {
-    "@lightningjs/sdk": "^5.3.1"
+    "@lightningjs/sdk": "^5.3.1",
+    "@lightningjs/ui": "^1.3.7",
+    "axios": "^1.3.4"
   },
   "devDependencies": {
-    "typescript": "^4.7.4",
     "@babel/core": "^7.7.2",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
@@ -18,7 +20,19 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "typescript": "^4.7.4"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "lint-staged": {
     "*.js": [
