--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@lightningjs/sdk": "^5.3.1",
     "@lightningjs/ui": "^1.3.7",
+    "@lightningjs/ui-components": "^2.0.2",
     "axios": "^1.3.4"
   },
   "devDependencies": {
