added storage check, added 100+ item rail, added multiple network call while rail

--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,9 @@ build-ts
 releases
 .tmp
 .env
-<<<<<<< Updated upstream
 .ipk
-=======
 platforms/WebOs/dist
 platforms/WebOs/build
 platforms/Tizen/dist
 platforms/Tizen/build
->>>>>>> Stashed changes
+platforms/*.ipk
