--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@lightningjs/sdk": "^5.3.1",
     "@lightningjs/ui": "^1.3.7",
     "@lightningjs/ui-components": "^2.0.2",
-    "axios": "^1.3.4"
+    "axios": "^1.3.4",
+    "shaka-player": "^4.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
