dynamic card sizes

--- a/settings.json
+++ b/settings.json
@@ -4,7 +4,8 @@
       "clearColor": "0x00000000",
       "useImageWorker": true
     },
-    "debug": false
+    "debug": false,
+    "enablePointer": true
   },
   "platformSettings": {
     "path": "./static",
