--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.21.5",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
+    "@vitejs/plugin-legacy": "^4.0.3",
     "babel-eslint": "^10.0.3",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
@@ -36,6 +38,7 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "terser": "^5.17.1",
     "typescript": "^4.7.4",
     "vite": "^4.3.3"
   },
