--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cp-dist-webos-es6": "cp -r ./dist/es6/ ./platforms/WebOS/dist || copy ./dist/es6/ ./platforms/WebOS/",
     "cp-dist-tizen-es6": "cp -r ./dist/es6/ ./platforms/Tizen/www/ || copy ./dist/es6/ ./platforms/Tizen/www/",
     "build-es5": "npm run rm-dist-webos && npm run rm-dist-tizen && lng dist --es5 && npm run cp-dist-webos-es5 && npm run cp-dist-tizen-es5",
-    "build-es6": "npm run rm-dist-webos && npm run rm-dist-tizen && lng dist && npm run cp-dist-webos-es6 && npm run cp-dist-tizen-es6"
+    "build-es6": "npm run rm-dist-webos && npm run rm-dist-tizen && lng dist && npm run cp-dist-webos-es6 && npm run cp-dist-tizen-es6",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@lightningjs/sdk": "^5.3.1",
@@ -27,16 +28,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.21.5",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
+    "@vitejs/plugin-legacy": "^4.0.3",
     "babel-eslint": "^10.0.3",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "gh-pages": "^5.0.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "typescript": "^4.7.4"
+    "terser": "^5.17.1",
+    "typescript": "^4.7.4",
+    "vite": "^4.3.3"
   },
   "browserslist": {
     "production": [
