--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@lightningjs/ui": "^1.3.7",
     "@lightningjs/ui-components": "^2.0.2",
     "axios": "^1.3.4",
-    "shaka-player": "^4.3.5"
+    "shaka-player": "^4.3.5",
+    "ua-parser-js": "^1.0.35"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.21.5",
+    "@types/ua-parser-js": "^0.7.36",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "@vitejs/plugin-legacy": "^4.0.3",
